gtk-3.0: remove frame border to fix layout problem

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -163,7 +163,6 @@ GtkClutterOffscreen {
  ***********/
 
 .button,
-.frame,
 .notebook,
 .check,
 .check row,
